# adventofcode2024

./: Cargo.toml
day-01/: Cargo.toml
day-02/: Cargo.toml
day-02/src/: lib.rs
day-03/: Cargo.toml
day-04/: Cargo.toml
day-04/src/: lib.rs
day-05/: Cargo.toml
day-05/src/: lib.rs
day-06/: Cargo.toml  input.txt
day-06/src/: lib.rs
day-07/: Cargo.toml  input.txt
day-07/src/: lib.rs
day-08/: Cargo.toml
day-08/src/: lib.rs
day-09/: Cargo.toml
day-09/src/: lib.rs
day-10/: Cargo.toml
day-10/src/: lib.rs
day-11/: Cargo.toml
day-11/src/: lib.rs
day-12/: Cargo.toml
day-13/: Cargo.toml
day-13/src/: lib.rs
day-14/: Cargo.toml
day-14/src/: lib.rs
day-15/: Cargo.toml
day-15/src/: lib.rs
day-16/: Cargo.toml  input.txt
day-16/src/: lib.rs
day-17/: Cargo.toml
day-17/benches/: benchmarks.rs
day-17/src/: lib.rs  part1.rs  part2.rs
day-18/: Cargo.toml
day-18/benches/: benchmarks.rs
day-18/src/: lib.rs  part1.rs  part2.rs
day-22/: Cargo.toml
day-22/benches/: benchmarks.rs
day-22/src/: lib.rs  part1.rs  part2.rs
day-23/: Cargo.toml  graph.dot
day-23/benches/: benchmarks.rs
day-23/src/: lib.rs  part1.rs  part2.rs
template/: Cargo.toml
template/src/: lib.rs  part2.rs
