[package]
name = "day-18"
version = "0.1.0"
edition = "2021"

[dependencies]
nom = { workspace = true }
rstest = { workspace = true }
divan = { workspace = true }
glam = { workspace = true }
pathfinding = { workspace = true }

[[bench]]
name = "day-18-bench"
path = "benches/benchmarks.rs"
harness = false
